css fixed issue on mobile devices, products page

--- a/src/Components/Products.css
+++ b/src/Components/Products.css
@@ -17,7 +17,7 @@
   font-size: 24px;
   text-align: center;
   border: 3px solid black;
-  width: 500px;
+  width: 50%;
   padding: 75px;
   margin: 10px auto;
   border-radius: 8px;
@@ -41,6 +41,9 @@
   font-size: 25px;
 }
 
-
-
+@media only screen and (max-width: 600px) {
+  .products_list {
+    width: auto;
+  }
+}
 
